Run timing loop twice and throw away first results